# particle-life

./: Cargo.toml
assets/shaders/: draw.wgsl  particle_life.wgsl
presets/: cells-1.json  cells-2.json  chase-1.json  ecosystem-1.json  hunting-green-blobs.json  settings.json
src/: main.rs  particle.rs  ui.rs  universe.rs  world.rs
src/particle_life/: buffers.rs  compute.rs  mod.rs  settings.rs  texture.rs  ui.rs
