[package]
name = "particle_life"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.3.25"
ndarray = "0.15.6"
rand = "0.8.5"
serde = {version = "1.0.152", features = ["derive"]}
serde_json = "1.0.91"
rayon = "1.7.0"